--- a/.github/workflows/proc-workflow.yml
+++ b/.github/workflows/proc-workflow.yml
@@ -2,7 +2,7 @@ name: proc-workflow
 on: [push]
 jobs: 
    test:
-     runs-n: ubuntu-latest
+     runs-on: ubuntu-latest
      steps:
        - uses: actions/checkout@v2
        - uses: actions/setup-go@v1
