--- a/.github/workflows/proc-workflow.yml
+++ b/.github/workflows/proc-workflow.yml
@@ -8,4 +8,5 @@ jobs:
        - uses: actions/setup-go@v1
          with:
              go-version: '1.15'
+       - run: go get
        - run: go test ./...
